--- a/IHM/CM/IHM_Cours.tex
+++ b/IHM/CM/IHM_Cours.tex
@@ -35,7 +35,8 @@
 \begin{document}
 \maketitle
 
-\section{Définition d'une IHM}
+\section{Définitions}
+\subsection{IHM}
 Les IHM définissent les moyens et outils mis en oeuvre afin qu'un humain puisse contrôler et communiquer avec une machine.\\
 
 \subsection{Les ordinateurs}
@@ -43,5 +44,94 @@ Ordinateur : unité de calcul + unité de stockage
 
 Machine automatique de traitement de 'information obéissant à des programmes formés par une suite d'opérations arithmétiques et logiques.
 
+\subsection{Types d'interaction}
+\subsubsection{Entrée:}
+Dans l'ordre chronologique :
+\begin{itemize}
+	\item WIMP $\rightarrow$ Windows Icons Menu Pointers, Sonore
+	\item Tactile
+	\item Vocale, Gestuel
+	\item Tangible (toucher les éléments d'interaction) (Réalité Virtuelle)
+	\item Visuel / Sonore
+\end{itemize}
+\subsubsection{Sortie:}
+\begin{itemize}
+	\item affichage sur l'écran
+	\item son (alarme)
+\end{itemize}
+
+Il existe beaucoup de types d'interaction, on peut très bien en imaginer d'autres.
+
+\subsection{L'Humain}
+Humain = système
+
+Sous-systèmes:
+\begin{itemize}
+	\item sensoriel
+	\item moteur
+	\item cognitif
+\end{itemize}
+
+Chaque sous-système a un "processeur" et une mémoire.
+
+\begin{tabular}{|p{2cm}|p{8cm}|p{4cm}|}
+\hline
+& Humain & Machine\\
+\hline
+Traitement information & expérience/connaissance/apprentissables $\rightarrow$ imprévisible & suite arithmétique logique $\rightarrow$ résultat prévisible\\
+\hline
+Modalités d'entrée & ouïe, vue, toucher, goût $\rightarrow$ très stable & périphériques (clavier, souris) $\rightarrow$ évoluable\\
+\hline
+Modalités de sortie & parole, geste & périphériques de sortie (imprimante, écran) $\rightarrow$ évoluable\\
+\hline
+Capacité de stockage & $\rightarrow$ plus ou moins stable, décroissante & Tera/Giga octets $\rightarrow$ extensible\\
+\hline
+Adaptation à l'environnement & s'adapte/apprend & doit être prévue \\
+\hline
+\end{tabular}
+
+\subsection{Ergonomie}
+Discipline qui consiste à adapter le travail, les outils et l'environnement à l'homme (et non l'inverse)
+
+Il faut connaître l'environnement.
+
+\subsection{Génie logiciel}
+Science du génie industriel qui étudie les méthodes de travail et les bonnes pratiques des ingénieurs qui développent des logiciels en particulier dans l'objectif d'identifier des procédures systématiques qui permettent d'arriver à ce que les logiciels de grande taille correspondent aux attentes client, soient fiables, aient un coût d'entretien faible et de bonnes performances.
+
+\subsubsection{Processus connus}
+\begin{itemize}
+	\item agile
+	\item incrémental
+	\item scrum
+	\item cascade
+\end{itemize}
+
+\subsubsection{Etapes de vie d'un logiciel}
+\begin{itemize}
+	\item spécification
+	\item conception
+	\begin{itemize}
+		\item globale
+		\item détaillée
+	\end{itemize}
+	\item implémentation
+	\item validation/test/recette
+\end{itemize}
+
+\subsubsection{Qui intervient?}
+\begin{itemize}
+	\item futurs utilisateurs
+	\item client
+	\item concepteur/architecte logiciel
+	\item développeurs
+	\item chef de projet/responsable
+\end{itemize}
+
+\subsubsection{Utilité}
+capacité d'un dispositif technique de répondre aux besoins réels des utilisateurs.
+
+\subsubsection{Utilisabilité}
+norme iso 92 41-11
+degré selon lequel un produit peut être utilisé par des utilisateurs identifiés pour atteindre des buts définis avec efficacité, efficience et satisfaction dans un contexte d'utilisation spécifié.
 
 \end{document}
