--- a/TLI/CM/TLI_Cours.tex
+++ b/TLI/CM/TLI_Cours.tex
@@ -77,8 +77,28 @@ Choix parmi des fonctions programmées.
 \subsubsection{La manipulation directe ("direct manipulation"}
 B. Schneiderman
 
-Premiers ordinateurs personnels : Xerox Star et Xerox Lisa (avec fonctions de drag&drop)
+Premiers ordinateurs personnels : Xerox Star et Xerox Lisa (avec fonctions de drag and drop)
 
+\chapter{Principes pour le développement de logiciel interactif}
+\section{Element d'architecture}
+\begin{itemize}
+	\item Séparation de l'interface\\
+	
+Principe 1 : sépaer Noyau Fonctionnel (quoi) et IU (comment)
 
+Principe 2 : NF indépendant de IU
+
+$\rightarrow$ Minimiser les dépendances
+
+Principe 3 : NF conçu pour l'interaction 
+
+	\begin{itemize}
+		\item la notification
+		\item en prévention des erreurs
+		\item annulation
+	\end{itemize}
+	
+	\item Modèle de Seeheim
+\end{itemize}
 
 \end{document}
